feat: Implement API client for onboarding, KYC upload, and advice retrieval
- Added `api_client.py` to handle API requests for onboarding, KYC uploads, and product advice.
- Introduced error handling for API responses.
- Created `state_manager.py` to manage session state in Streamlit, including step flow and state defaults.
- Implemented functions to reset state and track progress through onboarding steps.

feat: Develop gateway routers for onboarding, KYC, advisor, and support

- Created routers for handling onboarding, KYC document uploads, product advice, and support queries.
- Each router publishes messages to Redis channels for further processing.
- Added logging for better traceability of requests and responses.

chore: Set up orchestrator for managing task states and message routing

- Implemented orchestrator logic to handle task states and trigger subsequent steps based on received messages.
- Utilized Redis for inter-service communication and state management.
- Added error handling and logging for message processing.

build: Add Dockerfile and requirements for orchestrator service

- Created Dockerfile for orchestrator service with necessary dependencies.
- Defined requirements for orchestrator and gateway services to ensure proper environment setup.

refactor: Organize utility functions and improve code structure

- Moved Redis client logic to a separate utility module for better separation of concerns.
- Refactored code for clarity and maintainability across the gateway and orchestrator services.

--- a/agents/audit/Dockerfile
+++ b/agents/audit/Dockerfile
@@ -1,9 +1,14 @@
-FROM python:3.11-slim
+FROM python:3.10-slim
 
 WORKDIR /app
 
-RUN pip install redis
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY audit.py .
+COPY . .
 
-CMD ["python", "audit.py"]
+ENV REDIS_URL=redis://redis:6379/0
+ENV OLLAMA_URL=http://ollama:11434
+VOLUME ["/data/audit_logs"]
+
+CMD ["python", "audit_agent.py"]
