--- a/agents/kyc/Dockerfile
+++ b/agents/kyc/Dockerfile
@@ -1,9 +1,21 @@
 FROM python:3.11-slim
 
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
 WORKDIR /app
 
-RUN pip install redis
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        build-essential \
+        libgl1 \
+        libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY kyc.py .
+COPY requirements.txt ./requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python", "kyc.py"]
+RUN mkdir -p /app/agents/kyc
+COPY . /app/agents/kyc
+
+CMD ["python", "-m", "agents.kyc.kyc_agent"]
