--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -2,7 +2,7 @@ name: Build and Push Images
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, onimisi/gh_actions ]  # Temporary: added current branch for testing
 
 env:
   AWS_REGION: us-east-1
@@ -30,6 +30,36 @@ jobs:
           if [ ${#AWS_SECRET_ACCESS_KEY} -ne 40 ]; then
             echo "Error: AWS_SECRET_ACCESS_KEY length is not 40 characters"
             exit 1
+          fi
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      # Debug step to check secrets (temporary)
+      - name: Debug AWS Credentials
+        run: |
+          echo "Checking AWS credential properties:"
+          echo "ACCESS_KEY_LENGTH=${#AWS_ACCESS_KEY_ID}"
+          echo "SECRET_KEY_LENGTH=${#AWS_SECRET_ACCESS_KEY}"
+          echo "ACCESS_KEY_FIRST_CHAR=${AWS_ACCESS_KEY_ID:0:10}"
+          echo "ACCESS_KEY_LAST_CHAR=${AWS_ACCESS_KEY_ID: -1}"
+          echo "SECRET_KEY_FIRST_CHAR=${AWS_SECRET_ACCESS_KEY:0:20}"
+          echo "SECRET_KEY_LAST_CHAR=${AWS_SECRET_ACCESS_KEY: -1}"
+          
+          # Check for common issues
+          if [ -z "$AWS_ACCESS_KEY_ID" ]; then
+            echo "ERROR: AWS_ACCESS_KEY_ID is empty"
+          fi
+          if [ -z "$AWS_SECRET_ACCESS_KEY" ]; then
+            echo "ERROR: AWS_SECRET_ACCESS_KEY is empty"
+          fi
+          
+          # Check for whitespace
+          if [[ "$AWS_ACCESS_KEY_ID" != "${AWS_ACCESS_KEY_ID%[[:space:]]*}" ]]; then
+            echo "WARNING: AWS_ACCESS_KEY_ID contains trailing whitespace"
+          fi
+          if [[ "$AWS_SECRET_ACCESS_KEY" != "${AWS_SECRET_ACCESS_KEY%[[:space:]]*}" ]]; then
+            echo "WARNING: AWS_SECRET_ACCESS_KEY contains trailing whitespace"
           fi
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
