--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - OLLAMA_BASE_URL=http://ollama:11434
       - OLLAMA_URL=http://ollama:11434
       - LOG_LEVEL=INFO
+      - ENABLE_AUDIT_LLM=false
+      - ENABLE_KYC_LLM=false
     volumes:
       - audit_logs:/app/audit_logs
     depends_on:
@@ -32,7 +34,8 @@ services:
       - "8501:8501"
     environment:
       - GATEWAY_URL=http://gateway:8000
-      - STATUS_POLL_INTERVAL=60
+      - STATUS_POLL_INTERVAL=5
+      - STATUS_POLL_TIMEOUT=600
     depends_on:
       - gateway
     restart: unless-stopped
